--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./outils/variables";
-@import './components/loader';
+@import './animations/loader';
 @import './outils/keyframes';
 @import './outils/mixins';
+@import './general-style/general-style';
