--- a/sass/main.css
+++ b/sass/main.css
@@ -1,5 +1,6 @@
 /*------------------------MOBILE-------------------------*/
 /*-----------------------DESKTOP---------------------------*/
+@import url(https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap);
 .loader {
   position: fixed;
   top: 0;
@@ -99,4 +100,54 @@
   }
 }
 /*------------------------MOBILE-------------------------*/
-/*-----------------------DESKTOP---------------------------*//*# sourceMappingURL=main.css.map */
+/*-----------------------DESKTOP---------------------------*/
+html {
+  font-family: "DM Sans", sans-serif;
+}
+
+body {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+nav ul li:hover,
+li.actived {
+  background-color: #901C1C;
+  color: #fff;
+}
+
+header img {
+  width: 8rem;
+}
+
+header nav ul {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  left: 0;
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 90px;
+}
+
+ul li {
+  border: 0.5px solid #C4C4C4;
+  border-radius: 11px;
+  color: #901C1C;
+  font-size: 14px;
+  font-weight: 500;
+  list-style: none;
+  margin: 0 0.1875rem;
+  padding: 0.0625rem 0.375rem;
+  text-decoration: none;
+  transition: all 0.2s;
+}
+
+a {
+  text-decoration: none;
+}/*# sourceMappingURL=main.css.map */
