--- a/sass/general-style/_general-style.scss
+++ b/sass/general-style/_general-style.scss
@@ -35,7 +35,7 @@ header img {
     top: 90px;
   }
   
-  ul li {
+  li {
     border: .5px solid #C4C4C4;
     border-radius: 11px;
     color: #901C1C;
