--- a/public/general-style/general-style.css
+++ b/public/general-style/general-style.css
@@ -8,13 +8,16 @@
   width: 100%;
   height: 100%;
   display: inline-block;
+  -o-object-fit: cover;
   object-fit: cover;
   background-position: center;
   background-color: rgba(241, 241, 241, 0.8);
   filter: contrast(20);
+  -webkit-animation: controler 2.8s linear 5s forwards;
   animation: controler 2.8s linear 5s forwards;
   z-index: 1;
 }
+
 .loader .dot {
   position: absolute;
   width: 16px;
@@ -24,8 +27,10 @@
   filter: blur(4px);
   background: #000;
   border-radius: 50%;
+  -webkit-animation: point 2.8s 5;
   animation: point 2.8s 5;
 }
+
 @media screen and (min-width: 1023px) {
   .loader .dot {
     top: 45%;
@@ -42,8 +47,10 @@
   position: absolute;
   top: 45%;
   left: 44%;
+  -webkit-animation: points 2.8s 5;
   animation: points 2.8s 5;
 }
+
 .loader .dots span {
   display: flex;
   float: left;
@@ -60,14 +67,31 @@
   transition: opacity 10s ease-out;
 }
 
+@-webkit-keyframes point {
+  50% {
+    transform: translateX(600%);
+  }
+}
 @keyframes point {
   50% {
     transform: translateX(600%);
   }
 }
+@-webkit-keyframes points {
+  50% {
+    transform: translateX(-46%);
+  }
+}
 @keyframes points {
   50% {
     transform: translateX(-46%);
+  }
+}
+@-webkit-keyframes controler {
+  100% {
+    z-index: -1;
+    opacity: 0;
+    display: none;
   }
 }
 @keyframes controler {
@@ -128,6 +152,6 @@ ul li {
 
 a {
   text-decoration: none;
-}
+} /*# sourceMappingURL=main.css.map */
 
 /*# sourceMappingURL=general-style.css.map */
