--- a/sass/home_page-components/_photographers.scss
+++ b/sass/home_page-components/_photographers.scss
@@ -10,9 +10,9 @@
     
   }
   article img {
-    background-color: #59ce26;
+    background-color: blac;
     height: 12.5rem;
-    width: 12.5;
+    width: 12.5rem;
     margin: 0 auto;
     overflow: hidden;
     border-radius: 50%;
@@ -28,10 +28,9 @@
   }
   .articlePhotographer a {
     text-decoration: none;
+    color: #59ce26;
   }
-  section :nth-child(6), :nth-child(2) img{
-    width: 12.5rem;
-  }
+  
   @media screen and (min-width: map-get($breakpoints, desktop)) {
     .tags {
       display: flex;
