--- a/public/general-style/general-style.css
+++ b/public/general-style/general-style.css
@@ -8,16 +8,13 @@
   width: 100%;
   height: 100%;
   display: inline-block;
-  -o-object-fit: cover;
   object-fit: cover;
   background-position: center;
   background-color: rgba(241, 241, 241, 0.8);
   filter: contrast(20);
-  -webkit-animation: controler 2.8s linear 5s forwards;
   animation: controler 2.8s linear 5s forwards;
   z-index: 1;
 }
-
 .loader .dot {
   position: absolute;
   width: 16px;
@@ -27,10 +24,8 @@
   filter: blur(4px);
   background: #000;
   border-radius: 50%;
-  -webkit-animation: point 2.8s 5;
   animation: point 2.8s 5;
 }
-
 @media screen and (min-width: 1023px) {
   .loader .dot {
     top: 45%;
@@ -47,10 +42,8 @@
   position: absolute;
   top: 45%;
   left: 44%;
-  -webkit-animation: points 2.8s 5;
   animation: points 2.8s 5;
 }
-
 .loader .dots span {
   display: flex;
   float: left;
@@ -67,31 +60,14 @@
   transition: opacity 10s ease-out;
 }
 
-@-webkit-keyframes point {
-  50% {
-    transform: translateX(600%);
-  }
-}
 @keyframes point {
   50% {
     transform: translateX(600%);
   }
 }
-@-webkit-keyframes points {
-  50% {
-    transform: translateX(-46%);
-  }
-}
 @keyframes points {
   50% {
     transform: translateX(-46%);
-  }
-}
-@-webkit-keyframes controler {
-  100% {
-    z-index: -1;
-    opacity: 0;
-    display: none;
   }
 }
 @keyframes controler {
@@ -137,21 +113,21 @@ header nav ul {
   top: 90px;
 }
 
-ul li {
+li {
   border: 0.5px solid #C4C4C4;
   border-radius: 11px;
   color: #901C1C;
   font-size: 14px;
   font-weight: 500;
   list-style: none;
-  margin: 0 0.1875rem;
+  margin: 0 0.1875rem 0.1875rem;
   padding: 0.0625rem 0.375rem;
   text-decoration: none;
-  transition: all 0.2s;
+  transition: all 1s;
 }
 
 a {
   text-decoration: none;
-} /*# sourceMappingURL=main.css.map */
+}
 
 /*# sourceMappingURL=general-style.css.map */
