--- a/sass/general-style/_general-style.scss
+++ b/sass/general-style/_general-style.scss
@@ -42,11 +42,12 @@ header img {
     font-size: 14px;
     font-weight: 500;
     list-style: none;
-    margin: 0 .1875rem;
+    margin: 0 .1875rem .1875rem;
     padding: .0625rem .375rem;
     text-decoration: none;
-    transition: all .2s;
+    transition: all 1s;
   }
+
   a{
     text-decoration: none;
   }
