--- a/sass/pages/photographers.scss
+++ b/sass/pages/photographers.scss
@@ -1,3 +1,5 @@
 @import '../photographer_page-components/header';
 @import '../photographer_page-components/lightbox';
 @import '../photographer_page-components/form';
+@import '../photographer_page-components/phProfile';
+@import '../photographer_page-components/phButton';
