--- a/public/photographer-style/photographer-style.css
+++ b/public/photographer-style/photographer-style.css
@@ -1,3 +1,19 @@
+#form-dialog {
+  display: none;
+  justify-content: center;
+  background-color: red;
+  border-radius: 0.3rem;
+  left: 50%;
+  max-width: 42rem;
+  min-width: 18.75rem;
+  position: absolute;
+  right: 50%;
+  top: 0;
+  transform: translate(-50%);
+  z-index: 5;
+  width: 100%;
+}
+
 .ph-profil {
   display: flex;
   justify-content: space-between;
