--- a/public/photographer-style/photographer-style.css
+++ b/public/photographer-style/photographer-style.css
@@ -1,8 +1,170 @@
+header {
+  align-items: center;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+}
+header img {
+  width: 12.5rem;
+}
+
+@media (min-width: 900px) {
+  header {
+    margin-left: 2rem;
+  }
+}
+aside {
+  background-color: #fff;
+  display: none;
+  height: 200vw;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+}
+aside article:nth-last-child(1) {
+  color: #901c1c;
+  font-family: sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+#lightbox-body {
+  background-color: #fff;
+  height: 90%;
+  left: 50%;
+  margin: 0 auto;
+  position: fixed;
+  text-align: center;
+  top: 3%;
+  transform: translate(-50%, 0);
+  width: 60%;
+}
+
+#works-lightbox-media {
+  height: 100%;
+  margin: 0 auto 1rem;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0);
+  width: 90%;
+}
+#works-lightbox-media img, #works-lightbox-media video {
+  height: 100%;
+  object-fit: contain;
+  width: 100%;
+}
+
+.close-lightbox-icon {
+  color: #901c1c;
+  font-size: 1.7rem;
+  position: absolute;
+  right: -3rem;
+  top: 0.5rem;
+}
+
+.left-arrow-lightbox {
+  color: #901c1c;
+  font-size: 2rem;
+  left: -3rem;
+  position: absolute;
+  top: 48%;
+}
+
+.right-arrow-lightbox {
+  color: #901c1c;
+  font-size: 2rem;
+  position: absolute;
+  right: -3rem;
+  top: 48%;
+}
+
+@media (min-width: 600px) {
+  .close-lightbox-icon {
+    cursor: pointer;
+    right: 1rem;
+    top: 0.5rem;
+  }
+  .left-arrow-lightbox {
+    cursor: pointer;
+    left: 0;
+    top: 48%;
+  }
+  .right-arrow-lightbox {
+    cursor: pointer;
+    left: 0;
+    top: 48%;
+  }
+  aside article:nth-last-child(1) {
+    left: 23%;
+    padding: 0.5rem 0;
+  }
+}
+form {
+  background-color: #db8876;
+  display: flex;
+  flex-direction: column;
+  border-radius: 0.1rem;
+  padding: 1.5rem 2.2rem 2.2rem;
+}
+form #ph-form-name {
+  display: block;
+}
+form #close-btn {
+  background: #db8876;
+  border: none;
+}
+form .close-form-icon {
+  color: #fff;
+  font-size: 2rem;
+  margin-top: 0.6rem;
+}
+form .close-form-icon:hover,
+form .form-submit:hover {
+  cursor: pointer;
+}
+form .form-submit {
+  align-self: center;
+  background: #901c1c;
+  color: #fff;
+  font-size: 1rem;
+  height: 2.2rem;
+  margin-top: 1.6rem;
+  width: 10.6rem;
+}
+form button {
+  border: none;
+  background: none;
+}
+form header {
+  display: flex;
+  justify-content: space-between;
+  margin: -0.3rem 0.3rem 1.25rem 0;
+}
+form h1 {
+  font-size: 2.2rem;
+  font-weight: 400;
+}
+form input, form textarea {
+  border: none;
+  border-radius: 0.3rem;
+  font-size: 1.2rem;
+  padding: 0.3rem;
+}
+form label {
+  font-size: 1.2rem;
+  margin: 0.3rem 0 0.2rem;
+}
+form input[data-error]::after {
+  color: #901c1c;
+  content: attr(data-error);
+  font-size: 0.6rem;
+}
+
 #form-dialog {
   display: none;
   justify-content: center;
-  background-color: red;
   border-radius: 0.3rem;
+  border: none;
   left: 50%;
   max-width: 42rem;
   min-width: 18.75rem;
@@ -14,10 +176,78 @@
   width: 100%;
 }
 
+.formData {
+  display: flex;
+  flex-direction: column;
+}
+
+.formData[data-error]::after {
+  color: #901c1c;
+  content: attr(data-error);
+  display: block;
+  flex-direction: column;
+  font-size: 1rem;
+  line-height: 0.3;
+  margin-bottom: 7px;
+  margin-top: 7px;
+  text-align: left;
+  transition: 0.8s;
+  opacity: 0;
+}
+
+.formData[data-error-visible=true]::after {
+  opacity: 1;
+}
+
+@media (min-width: 600px) {
+  #form-dialog {
+    top: 4.3rem;
+    width: 95%;
+  }
+  form .close-form-icon {
+    font-size: 2.4rem;
+  }
+  form .form-submit {
+    align-self: flex-start;
+    height: 4.4rem;
+  }
+  form h1 {
+    font-size: 2.6rem;
+  }
+  form label, form input, form textarea {
+    font-size: 1.6rem;
+  }
+}
+#ph-contact {
+  width: 170px;
+  bottom: 25px;
+  margin-top: 2.4rem;
+  margin-left: -17rem;
+  border-radius: 5px;
+  background-color: #901C1C;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  font-size: 1em;
+  font-weight: 500;
+  height: 35px;
+}
+
+.ph-profil button:hover {
+  background: #651414;
+  transform: scale(1.05);
+}
+
 .ph-profil {
   display: flex;
   justify-content: space-between;
   text-align: center;
+}
+.ph-profil img {
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  object-fit: cover;
 }
 .ph-profil .ph-infos h2 {
   columns: #D3573C;
@@ -28,10 +258,12 @@
 .ph-profil .ph-infos .ph-city {
   color: #901c1c;
   font-size: 0.9rem;
+  margin: 0;
 }
 .ph-profil .ph-infos .ph-tagline {
   color: #525252;
   font-size: 0.9rem;
+  margin: 0;
 }
 .ph-profil .ph-infos .ph-tags {
   border: 0.5px solid #c4c4c4;
@@ -59,6 +291,15 @@
     top: 9.8rem;
   }
 }
+@media (max-width: 1200px) {
+  .ph-profil button {
+    height: 0;
+    left: 0;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 1;
+  }
+}
 @media (min-width: 900px) {
   .ph-profil {
     background-color: #fafafa;
@@ -83,14 +324,72 @@
     margin-bottom: 1rem;
   }
 }
-#ph-contact {
-  height: 69px;
-  width: 170px;
-  left: 0px;
-  top: 0px;
-  border-radius: 5px;
-  background-color: #901C1C;
-  color: #fff;
+.works-sort {
+  display: none;
+}
+
+@media (min-width: 900px) {
+  .arrow-down-open {
+    color: #fff;
+    left: 18.5rem;
+    position: absolute;
+    top: 26.4rem;
+  }
+  .arrow-up-close {
+    color: #fff;
+    left: 8.5rem;
+    position: absolute;
+    top: 1.55rem;
+  }
+  .hidden-sort li {
+    background: #901c1c;
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: 500;
+    padding: 1.25rem;
+  }
+  .sort-btn {
+    align-items: center;
+    background: #901c1c;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    display: flex;
+    font-size: 1rem;
+    font-weight: 500;
+    justify-content: flex-start;
+    left: 11rem;
+    padding: 0.625rem 1.25rem;
+    position: absolute;
+    top: 28.6rem;
+    width: 10rem;
+  }
+  .works-sort {
+    display: block;
+    margin-top: 2rem;
+    margin-left: 2rem;
+  }
+  .works-sort > span {
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin-right: 1.5625rem;
+  }
+  ul.hidden-sort {
+    border-radius: 5px;
+    color: #fff;
+    display: none;
+    left: 167px;
+    padding: 0;
+    position: absolute;
+    top: 385px;
+    width: 11rem;
+    z-index: 4;
+  }
+  ul.hidden-sort li:nth-child(1) {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 /*# sourceMappingURL=photographer-style.css.map */
