--- a/sass/photographer_page-components/_phProfile.scss
+++ b/sass/photographer_page-components/_phProfile.scss
@@ -1,7 +1,34 @@
+#ph-contact{
+    width: 170px;
+    bottom: 25px;
+    margin-top: 2.4rem;
+    margin-left: -17rem;
+    border-radius: 5px;
+    background-color: #901C1C;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: 500;
+    height: 35px;
+
+}
+
+.ph-profil button:hover{
+    background: #651414;
+    transform: scale(1.05);
+}
 .ph-profil{
     display: flex;
     justify-content: space-between;
     text-align: center;
+
+    img {
+        border-radius: 50%;
+        height: 100px;
+        width: 100px;
+        object-fit: cover;
+    }
 
     .ph-infos{
         h2 {
@@ -14,11 +41,13 @@
         .ph-city{
             color: #901c1c;
             font-size: .9rem;
+            margin: 0;
         }
 
         .ph-tagline{
             color: #525252;
             font-size: .9rem;
+            margin: 0;
         }
 
         .ph-tags{
@@ -49,6 +78,17 @@
             left: 42rem;
             position: absolute;
             top: 9.8rem;
+        }
+    }
+}
+@media (max-width: 1200px) {
+    .ph-profil{
+        button {
+            height: 0;
+            left: 0;
+            margin-left: auto;
+            margin-right: auto;
+            z-index: 1;
         }
     }
 }
