--- a/sass/photographer_page-components/_phProfile.scss
+++ b/sass/photographer_page-components/_phProfile.scss
@@ -76,7 +76,7 @@
         button {
             height: 55px;
             left: 42rem;
-            position: absolute;
+            position: fixed;
             top: 9.8rem;
         }
     }
