--- a/sass/home_page-components/_header.scss
+++ b/sass/home_page-components/_header.scss
@@ -7,7 +7,7 @@ header {
     overflow: hidden;
 }
 
-h1 {
+header > h1 {
     color: red;
     font-family: 'DM Sans', sans-serif;
     font-size: 14px;
