--- a/public/accueuil-style/accueuil-style.css
+++ b/public/accueuil-style/accueuil-style.css
@@ -7,7 +7,7 @@ header {
   overflow: hidden;
 }
 
-h1 {
+header > h1 {
   color: red;
   font-family: "DM Sans", sans-serif;
   font-size: 14px;
@@ -45,11 +45,15 @@ h1 {
   margin-top: 5rem;
   padding: 0;
   width: 100%;
-  justify-content: space-evenly;
+  justify-content: space-between;
+}
+
+article image, article a, article .location, article .tagline, article .price {
+  margin-bottom: -1rem;
 }
 
 article img {
-  background-color: blac;
+  background: black;
   height: 12.5rem;
   width: 12.5rem;
   margin: 0 auto;
