--- a/sass/home_page-components/_photographers.scss
+++ b/sass/home_page-components/_photographers.scss
@@ -6,11 +6,17 @@
     margin-top: 5rem;
     padding: 0;
     width: 100%;
-    justify-content: space-evenly;
+    justify-content: space-between;
     
   }
+  article {
+
+    image, a, .location, .tagline, .price {
+      margin-bottom: -1rem;
+    }
+  }
   article img {
-    background-color: blac;
+    background: black;
     height: 12.5rem;
     width: 12.5rem;
     margin: 0 auto;
