--- a/sass/photographer_page-components/_form.scss
+++ b/sass/photographer_page-components/_form.scss
@@ -6,6 +6,21 @@ form {
     padding: 1.5rem 2.2rem 2.2rem;
 
 
+    header {
+        display: flex;
+        justify-content: space-between;
+        margin: -.3rem .3rem 1.25rem 0;
+    }
+
+    h1 {
+        font-size: 2rem;
+        font-weight: 400;
+    }
+
+    span {
+        color: #181212;
+        font-weight: bold;
+    }
         
     #ph-form-name{
         display: block;
@@ -33,23 +48,12 @@ form {
         font-size: 1rem;
         height: 2.2rem;
         margin-top: 1.6rem;
-        width: 10.6rem;
+        width: 8.6rem;
     }
 
     button {
         border: none;
         background: none;
-    }
-
-    header {
-        display: flex;
-        justify-content: space-between;
-        margin: -.3rem .3rem 1.25rem 0;
-    }
-
-    h1 {
-        font-size: 2.2rem;
-        font-weight: 400;
     }
 
     input, textarea {
@@ -76,8 +80,10 @@ form {
     border-radius: .3rem;
     border: none;
     left: 50%;
-    max-width: 42rem;
-    min-width: 18.75rem;
+    max-width: 35rem;
+    min-width: 12.75rem;
+    min-height: 15rem;
+    max-height: 45rem;
     position: absolute;
     right: 50%;
     top: 0;
@@ -123,7 +129,7 @@ form {
 
     form .form-submit {
         align-self: flex-start;
-        height: 4.4rem;
+        height: 2.4rem;
     }
 
     form h1 {
