--- a/public/photographer-style/photographer-style.css
+++ b/public/photographer-style/photographer-style.css
@@ -1,7 +1,7 @@
 header {
   align-items: center;
   margin-bottom: 2rem;
-  margin-top: 0.5rem;
+  margin-top: 2rem;
 }
 header img {
   width: 12.5rem;
@@ -105,6 +105,7 @@ form {
   flex-direction: column;
   border-radius: 0.1rem;
   padding: 1.5rem 2.2rem 2.2rem;
+  height: 500px;
 }
 form header {
   display: flex;
@@ -141,7 +142,7 @@ form .form-submit {
   color: #fff;
   font-size: 1rem;
   height: 2.2rem;
-  margin-top: 1.6rem;
+  margin-top: 1rem;
   width: 8.6rem;
 }
 form button {
@@ -172,8 +173,6 @@ form input[data-error]::after {
   left: 50%;
   max-width: 35rem;
   min-width: 12.75rem;
-  min-height: 15rem;
-  max-height: 45rem;
   position: absolute;
   right: 50%;
   top: 0;
