--- a/sass/photographer_page-components/_form.scss
+++ b/sass/photographer_page-components/_form.scss
@@ -4,6 +4,7 @@ form {
     flex-direction: column;
     border-radius: .1rem;
     padding: 1.5rem 2.2rem 2.2rem;
+    height: 500px;
 
 
     header {
@@ -47,7 +48,7 @@ form {
         color: #fff;
         font-size: 1rem;
         height: 2.2rem;
-        margin-top: 1.6rem;
+        margin-top: 1rem;
         width: 8.6rem;
     }
 
@@ -82,8 +83,6 @@ form {
     left: 50%;
     max-width: 35rem;
     min-width: 12.75rem;
-    min-height: 15rem;
-    max-height: 45rem;
     position: absolute;
     right: 50%;
     top: 0;
