--- a/public/photographer-style/photographer-style.css
+++ b/public/photographer-style/photographer-style.css
@@ -103,23 +103,20 @@ form {
   background-color: #db8876;
   display: flex;
   flex-direction: column;
-  border-radius: 0.1rem;
-  padding: 1.5rem 2.2rem 2.2rem;
+  border-radius: 1rem;
+  padding: 1rem 2.2rem 2.2rem;
 }
 form header {
   display: flex;
   justify-content: space-between;
-  margin: -0.3rem 0.3rem 1.25rem 0;
+  margin: -0.3rem 0.3rem 1rem 0;
 }
 form h1 {
-  font-size: 2rem;
+  font-size: 10rem;
   font-weight: 400;
 }
 form span {
   color: #181212;
-}
-form #ph-form-name {
-  display: block;
 }
 form #close-btn {
   background: #db8876;
@@ -150,8 +147,7 @@ form button {
 form input, form textarea {
   border: none;
   border-radius: 0.3rem;
-  font-size: 1.2rem;
-  padding: 0.3rem;
+  font-size: 1rem;
 }
 form label {
   font-size: 1.2rem;
@@ -161,11 +157,11 @@ form input[data-error]::after {
   color: #901c1c;
   content: attr(data-error);
   font-size: 0.6rem;
+  padding: 0.3rem;
 }
 
 #form-dialog {
   display: none;
-  justify-content: center;
   border-radius: 0.3rem;
   border: none;
   left: 50%;
@@ -177,6 +173,7 @@ form input[data-error]::after {
   transform: translate(-50%);
   z-index: 5;
   width: 100%;
+  height: 400px;
 }
 
 .formData {
@@ -224,8 +221,6 @@ form input[data-error]::after {
 #ph-contact {
   width: 170px;
   bottom: 25px;
-  margin-top: 2.4rem;
-  margin-left: -17rem;
   border-radius: 5px;
   background-color: #901C1C;
   color: #fff;
@@ -234,6 +229,8 @@ form input[data-error]::after {
   font-size: 1em;
   font-weight: 500;
   height: 35px;
+  position: fixed;
+  width: 170PX;
 }
 
 .ph-profil button:hover {
@@ -244,7 +241,7 @@ form input[data-error]::after {
 .ph-profil {
   display: flex;
   justify-content: space-between;
-  text-align: center;
+  align-items: center;
 }
 .ph-profil img {
   border-radius: 50%;
@@ -274,8 +271,10 @@ form input[data-error]::after {
   font-size: 12px;
   text-decoration: none;
   transition: all 0.2s;
+  margin: 0;
   border-radius: 0.6875rem;
-  padding: 0 0.5rem 0 0.5rem;
+  padding: 0 0.0625rem 0 0.375rem;
+  transition: all 0.2s;
 }
 .ph-profil .ph-infos .ph-tags:hover {
   background-color: #901c1c;
@@ -289,8 +288,8 @@ form input[data-error]::after {
   }
   .ph-profil button {
     height: 55px;
-    left: 42rem;
-    position: fixed;
+    left: 48rem;
+    position: absolute;
     top: 9.8rem;
   }
 }
@@ -364,8 +363,9 @@ form input[data-error]::after {
     left: 11rem;
     padding: 0.625rem 1.25rem;
     position: absolute;
-    top: 28.6rem;
+    top: 25.6rem;
     width: 10rem;
+    cursor: pointer;
   }
   .works-sort {
     display: block;
@@ -376,6 +376,7 @@ form input[data-error]::after {
     font-size: 1.2rem;
     font-weight: 700;
     margin-right: 1.5625rem;
+    cursor: pointer;
   }
   ul.hidden-sort {
     border-radius: 5px;
@@ -387,6 +388,10 @@ form input[data-error]::after {
     top: 385px;
     width: 11rem;
     z-index: 4;
+  }
+  ul.hidden-sort li:hover {
+    background-color: #651414;
+    cursor: pointer;
   }
   ul.hidden-sort li:nth-child(1) {
     align-items: center;
