--- a/sass/photographer_page-components/_form.scss
+++ b/sass/photographer_page-components/_form.scss
@@ -2,28 +2,25 @@ form {
     background-color: #db8876;
     display: flex;
     flex-direction: column;
-    border-radius: .1rem;
-    padding: 1.5rem 2.2rem 2.2rem;
+    border-radius: 1rem;
+    padding: 1rem 2.2rem 2.2rem;
 
 
     header {
         display: flex;
         justify-content: space-between;
-        margin: -.3rem .3rem 1.25rem 0;
+        margin: -.3rem .3rem 1rem 0;
     }
 
     h1 {
-        font-size: 2rem;
+        font-size: 10rem;
         font-weight: 400;
     }
 
     span {
         color: #181212;
     }
-        
-    #ph-form-name{
-        display: block;
-    }
+       
 
     #close-btn{
         background: #db8876;
@@ -58,8 +55,7 @@ form {
     input, textarea {
         border: none;
         border-radius: .3rem;
-        font-size: 1.2rem;
-        padding: .3rem;
+        font-size: 1rem;
     }
 
     label {
@@ -71,12 +67,12 @@ form {
         color: #901c1c;
         content: attr(data-error);
         font-size: .6rem;
+        padding: .3rem;
     }
 }
 
 #form-dialog {
     display: none;
-    justify-content: center;
     border-radius: .3rem;
     border: none;
     left: 50%;
@@ -88,6 +84,7 @@ form {
     transform: translate(-50%);
     z-index: 5;
     width: 100%;
+    height: 400px;
 
 }
 
