--- a/sass/photographer_page-components/_phProfile.scss
+++ b/sass/photographer_page-components/_phProfile.scss
@@ -1,8 +1,6 @@
 #ph-contact{
     width: 170px;
     bottom: 25px;
-    margin-top: 2.4rem;
-    margin-left: -17rem;
     border-radius: 5px;
     background-color: #901C1C;
     color: #fff;
@@ -11,6 +9,8 @@
     font-size: 1em;
     font-weight: 500;
     height: 35px;
+    position: fixed;
+    width: 170PX;
 
 }
 
@@ -21,7 +21,7 @@
 .ph-profil{
     display: flex;
     justify-content: space-between;
-    text-align: center;
+    align-items: center;
 
     img {
         border-radius: 50%;
@@ -56,8 +56,10 @@
             font-size: 12px;
             text-decoration: none;
             transition: all .2s;
+            margin: 0;
             border-radius: .6875rem;
-            padding: 0 .5rem 0 .5rem;
+            padding: 0 .0625rem 0 .375rem;
+            transition: all .2s;
 
             &:hover {
                 background-color: #901c1c;
@@ -75,8 +77,8 @@
 
         button {
             height: 55px;
-            left: 42rem;
-            position: fixed;
+            left: 48rem;
+            position: absolute;
             top: 9.8rem;
         }
     }
