--- a/sass/photographer_page-components/_trierPar.scss
+++ b/sass/photographer_page-components/_trierPar.scss
@@ -18,14 +18,12 @@
         top: 1.55rem;
     }
 
-    .hidden-sort {
-        li {
-            background: #901c1c;
-            color: #fff;
-            font-size: 1.2rem;
-            font-weight: 500;
-            padding: 1.25rem;
-        }
+    .hidden-sort li {
+        background: #901c1c;
+        color: #fff;
+        font-size: 1.2rem;
+        font-weight: 500;
+        padding: 1.25rem;
     }
     .sort-btn {
         align-items: center;
@@ -40,8 +38,9 @@
         left: 11rem;
         padding: .625rem 1.25rem;
         position: absolute;
-        top: 28.6rem;
+        top: 25.6rem;
         width: 10rem;
+        cursor: pointer;
     }
 
     .works-sort {
@@ -50,10 +49,11 @@
         margin-left: 2rem;
     }
 
-    .works-sort > span {
+    .works-sort>span {
         font-size: 1.2rem;
         font-weight: 700;
         margin-right: 1.5625rem;
+        cursor: pointer;
     }
 
     ul.hidden-sort {
@@ -68,6 +68,11 @@
         z-index: 4;
     }
 
+    ul.hidden-sort li:hover {
+        background-color: #651414;
+        cursor: pointer;
+    }
+    
     ul.hidden-sort li:nth-child(1) {
         align-items: center;
         display: flex;
