--- a/sass/pages/photographers.scss
+++ b/sass/pages/photographers.scss
@@ -3,3 +3,4 @@
 @import '../photographer_page-components/form';
 @import '../photographer_page-components/phProfile';
 @import '../photographer_page-components/trierPar';
+@import '../photographer_page-components/photosPrises';
