--- a/sass/photographer_page-components/_lightbox.scss
+++ b/sass/photographer_page-components/_lightbox.scss
@@ -37,6 +37,7 @@ aside {
     width: 90%;
 
     img, video {
+        border-radius: 10px;
         height: 100%;
         object-fit: contain;
         width: 100%;
@@ -63,7 +64,7 @@ aside {
     color: #901c1c;
     font-size: 2rem;
     position: absolute;
-    right: -3rem;
+    right: -47.5rem;
     top: 48%;
 }
 
