--- a/public/photographer-style/photographer-style.css
+++ b/public/photographer-style/photographer-style.css
@@ -174,6 +174,7 @@ form input[data-error]::after {
   transform: translate(-50%);
   z-index: 5;
   width: 100%;
+  height: 400px;
 }
 
 .formData {
