--- a/sass/main.css
+++ b/sass/main.css
@@ -135,17 +135,17 @@ header nav ul {
   top: 90px;
 }
 
-ul li {
+li {
   border: 0.5px solid #C4C4C4;
   border-radius: 11px;
   color: #901C1C;
   font-size: 14px;
   font-weight: 500;
   list-style: none;
-  margin: 0 0.1875rem;
+  margin: 0 0.1875rem 0.1875rem;
   padding: 0.0625rem 0.375rem;
   text-decoration: none;
-  transition: all 0.2s;
+  transition: all 1s;
 }
 
 a {
