--- a/sass/pages/accueuil.css
+++ b/sass/pages/accueuil.css
@@ -7,7 +7,7 @@ header {
   overflow: hidden;
 }
 
-h1 {
+header > h1 {
   color: red;
   font-family: "DM Sans", sans-serif;
   font-size: 14px;
@@ -44,22 +44,43 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 5rem;
-  margin-top: 7rem;
+  margin-top: 5rem;
   padding: 0;
   width: 100%;
-  justify-content: space-evenly;
+  justify-content: space-between;
+}
+
+article image, article a, article .location, article .tagline, article .price {
+  margin-bottom: -1rem;
 }
 
 article img {
-  background-color: #59ce26;
+  background: black;
   height: 12.5rem;
-  width: 12.5;
+  width: 12.5rem;
   margin: 0 auto;
   overflow: hidden;
-  border-radius: 10%;
+  border-radius: 50%;
   -o-object-fit: cover;
      object-fit: cover;
   box-shadow: 0 0 0.8rem rgba(134, 134, 134, 0.432);
+}
+
+.articlePhotographer {
+  text-align: center;
+  width: 20rem;
+  padding: 0.5rem;
+  margin: 0.5rem;
+}
+
+.articlePhotographer a {
+  text-decoration: none;
+  color: #59ce26;
+}
+
+.articlePhotographer ul {
+  display: flex;
+  flex-flow: wrap;
 }
 
 @media screen and (min-width: 1023px) {
