--- a/sass/pages/photographers.scss
+++ b/sass/pages/photographers.scss
@@ -4,3 +4,4 @@
 @import '../photographer_page-components/phProfile';
 @import '../photographer_page-components/trierPar';
 @import '../photographer_page-components/photosPrises';
+@import '../photographer_page-components/box';
