--- a/sass/photographer_page-components/_photosPrises.scss
+++ b/sass/photographer_page-components/_photosPrises.scss
@@ -28,10 +28,10 @@
     font-size: 1.1em;
     font-weight: 500;
     margin: 0 0 .625rem;
-    width: 20.875rem;
+    width: 20.9375rem;
 
     img, video {
-        border-radius: 40.3125rem;
+        border-radius: .3125rem;
         height: 11.875rem;
         object-fit: cover;
         width: 20.9375rem;
@@ -44,7 +44,7 @@
     }
 
     .ph-taken-title {
-        width: 14.0625;
+        width: 14.0625rem;
     }
 }
 
