--- a/public/photographer-style/photographer-style.css
+++ b/public/photographer-style/photographer-style.css
@@ -45,7 +45,7 @@ aside article:nth-last-child(1) {
   height: 100%;
   margin: 0 auto 1rem;
   overflow: hidden;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgba(230, 16, 16, 0);
   width: 90%;
 }
 #works-lightbox-media img, #works-lightbox-media video {
@@ -75,10 +75,15 @@ aside article:nth-last-child(1) {
   color: #901c1c;
   font-size: 2rem;
   position: absolute;
-  right: -47.5rem;
+  right: -58.5rem;
   top: 48%;
 }
 
+@media (min-width: 1200px) {
+  .right-arrow-lightbox {
+    right: -47.5rem;
+  }
+}
 @media (min-width: 600px) {
   .close-lightbox-icon {
     cursor: pointer;
