--- a/public/photographer-style/photographer-style.css
+++ b/public/photographer-style/photographer-style.css
@@ -220,7 +220,6 @@ form input[data-error]::after {
   }
 }
 #ph-contact {
-  width: 170px;
   bottom: 25px;
   border-radius: 5px;
   background-color: #901C1C;
@@ -239,26 +238,16 @@ form input[data-error]::after {
   transform: scale(1.05);
 }
 
-/*
-#photos-taken{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-
-
-    video {
-        border-radius: 50%;
-        height: 100px;
-        width: 100px;
-        object-fit: cover;
-    }
-}
-*/
 .ph-profil {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.ph-profil button {
+  height: 55px;
+  position: absolute;
+  top: 9.8rem;
+  left: 50%;
 }
 .ph-profil img {
   border-radius: 50%;
@@ -303,17 +292,11 @@ form input[data-error]::after {
     background-color: #fafafa;
     margin: 0 20px;
   }
-  .ph-profil button {
-    height: 55px;
-    left: 48rem;
-    position: absolute;
-    top: 9.8rem;
-  }
 }
 @media (max-width: 1200px) {
   .ph-profil button {
     height: 0;
-    left: 0;
+    left: 50%;
     margin-left: auto;
     margin-right: auto;
     z-index: 1;
@@ -345,6 +328,9 @@ form input[data-error]::after {
 }
 .works-sort {
   display: none;
+}
+.works-sort #sort-wrapper button, .works-sort #sort-wrapper span, .works-sort #sort-wrapper ul {
+  margin-top: 2rem;
 }
 
 @media (min-width: 900px) {
@@ -420,7 +406,7 @@ form input[data-error]::after {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin: 2.8125rem 0;
+  margin: 0;
   padding: 0 1.25rem;
 }
 #photos-taken img, #photos-taken video {
