--- a/public/accueuil-style/accueuil-style.css
+++ b/public/accueuil-style/accueuil-style.css
@@ -41,13 +41,17 @@ header > h1 {
 .photographer__section {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: row;
   margin-bottom: 5rem;
   margin-top: 5rem;
   padding: 0;
   width: 100%;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
+article {
+  margin-right: 1rem;
+}
 article image, article a, article .location, article .tagline, article .price {
   margin-bottom: -1rem;
 }
