--- a/sass/pages/accueuil.css
+++ b/sass/pages/accueuil.css
@@ -43,11 +43,12 @@ header > h1 {
 .photographer__section {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: row;
   margin-bottom: 5rem;
   margin-top: 5rem;
   padding: 0;
   width: 100%;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 article image, article a, article .location, article .tagline, article .price {
