--- a/sass/photographer_page-components/_photosPrises.scss
+++ b/sass/photographer_page-components/_photosPrises.scss
@@ -2,8 +2,9 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 2.8125rem 0;
+    margin:  0;
     padding: 0 1.25rem;
+
 
     img, video {
         border-radius: .3125rem;
