--- a/sass/photographer_page-components/_trierPar.scss
+++ b/sass/photographer_page-components/_trierPar.scss
@@ -1,6 +1,15 @@
 // les differents tris
 .works-sort {
     display: none;
+        
+    #sort-wrapper{
+
+        button, span, ul {
+            margin-top: 2rem;
+        }
+    }
+
+
 }
 
 @media (min-width: 900px) {
