--- a/sass/home_page-components/_photographers.scss
+++ b/sass/home_page-components/_photographers.scss
@@ -30,7 +30,7 @@
     text-align: center;
     width: 20rem;
     padding: .5rem;
-    margin: .5rem;
+    margin: 5rem;
   }
   .articlePhotographer a {
     text-decoration: none;
