--- a/sass/photographer_page-components/_lightbox.scss
+++ b/sass/photographer_page-components/_lightbox.scss
@@ -13,6 +13,7 @@ aside {
         font-family: sans-serif;
         font-size: 1rem;
         font-weight: 600;
+        background-color: rgb(202, 44, 44);
     }
 }
 
@@ -56,6 +57,7 @@ aside {
     color: #901c1c;
     font-size: 2rem;
     left: -3rem;
+    background-color: black;
     position: absolute;
     top: 48%;
 }
@@ -64,13 +66,21 @@ aside {
     color: #901c1c;
     font-size: 2rem;
     position: absolute;
-    right: -58.5rem;
+    background-color: red;
+    right: -3rem;
     top: 48%;
 }
 
-@media (min-width: 1200px) {
+
+@media (max-width: 1300px) {
     .right-arrow-lightbox {
-        right: -47.5rem;
+        margin-right: -47.5rem;
+    }
+}
+
+@media (min-width: 1300px) {
+    .right-arrow-lightbox {
+        right: -47.5.5rem;
     }
 }
 
