--- a/sass/photographer_page-components/_photosPrises.scss
+++ b/sass/photographer_page-components/_photosPrises.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin:  0;
+    margin: 2.8125rem 0;
     padding: 0 1.25rem;
 
 
