--- a/sass/photographer_page-components/_lightbox.scss
+++ b/sass/photographer_page-components/_lightbox.scss
@@ -66,8 +66,9 @@ aside {
     color: #901c1c;
     font-size: 2rem;
     position: absolute;
-    background-color: red;
-    right: -3rem;
+    background-color: rgb(56, 33, 33);
+    width: 40px;
+    right: -47rem;
     top: 48%;
 }
 
