--- a/sass/photographer_page-components/_photosPrises.scss
+++ b/sass/photographer_page-components/_photosPrises.scss
@@ -4,6 +4,7 @@
     justify-content: space-around;
     margin: 2.8125rem 0;
     padding: 0 1.25rem;
+    background-color: red;
 
 
     img, video {
@@ -28,7 +29,7 @@
     color: #901c1c;
     font-size: 1.1em;
     font-weight: 500;
-    margin: 0 0 .625rem;
+    margin: 0 0 .9725rem;
     width: 20.9375rem;
 
     img, video {
