--- a/sass/home_page-components/_photographers.scss
+++ b/sass/home_page-components/_photographers.scss
@@ -7,11 +7,10 @@
     margin-top: 5rem;
     padding: 0;
     width: 100%;
-    justify-content: space-evenly;
     
 }
 article {
-    margin-right: 1rem;
+    margin: 1rem;
 
     image, a, .location, .tagline, .price {
       margin-bottom: -1rem;
