--- a/public/accueuil-style/accueuil-style.css
+++ b/public/accueuil-style/accueuil-style.css
@@ -3,15 +3,17 @@ header {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
-  margin-top: 2rem;
+  margin-top: 3rem;
+  height: 30px;
   overflow: hidden;
 }
 
 header > h1 {
   color: red;
   font-family: "DM Sans", sans-serif;
-  font-size: 14px;
+  font-size: 24px;
   width: fit-content;
+  margin-top: -1rem;
 }
 
 .button--forContent {
@@ -46,11 +48,10 @@ header > h1 {
   margin-top: 5rem;
   padding: 0;
   width: 100%;
-  justify-content: space-evenly;
 }
 
 article {
-  margin-right: 1rem;
+  margin: 1rem;
 }
 article image, article a, article .location, article .tagline, article .price {
   margin-bottom: -1rem;
@@ -71,7 +72,7 @@ article img {
   text-align: center;
   width: 20rem;
   padding: 0.5rem;
-  margin: 5rem;
+  margin: 0.5rem;
 }
 
 .articlePhotographer a {
