--- a/sass/home_page-components/_header.scss
+++ b/sass/home_page-components/_header.scss
@@ -3,13 +3,15 @@ header {
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
-    margin-top: 2rem;
+    margin-top: 3rem;
+    height: 30px;
     overflow: hidden;
 }
 
 header > h1 {
     color: red;
     font-family: 'DM Sans', sans-serif;
-    font-size: 14px;
+    font-size: 24px;
     width: fit-content;
+    margin-top: -1rem;
 }
