--- a/public/photographer-style/photographer-style.css
+++ b/public/photographer-style/photographer-style.css
@@ -27,17 +27,15 @@ aside article:nth-last-child(1) {
   font-family: sans-serif;
   font-size: 1rem;
   font-weight: 600;
-  background-color: rgb(202, 44, 44);
 }
 
 #lightbox-body {
-  background-color: #fff;
   height: 90%;
   left: 50%;
   margin: 0 auto;
   position: fixed;
   text-align: center;
-  top: 3%;
+  top: 4%;
   transform: translate(-50%, 0);
   width: 60%;
 }
@@ -47,28 +45,29 @@ aside article:nth-last-child(1) {
   margin: 0 auto 1rem;
   overflow: hidden;
   background-color: rgba(230, 16, 16, 0);
-  width: 90%;
+  width: 100%;
 }
 #works-lightbox-media img, #works-lightbox-media video {
   border-radius: 10px;
   height: 100%;
   object-fit: contain;
-  width: 100%;
+  width: 90%;
+  position: absolute;
+  left: 5%;
+  top: 0%;
 }
 
 .close-lightbox-icon {
   color: #901c1c;
   font-size: 1.7rem;
-  position: absolute;
-  right: -3rem;
-  top: 0.5rem;
+  margin-left: 97%;
+  margin-top: 0.5rem;
 }
 
 .left-arrow-lightbox {
   color: #901c1c;
   font-size: 2rem;
-  left: -3rem;
-  background-color: black;
+  left: 0;
   position: absolute;
   top: 48%;
 }
@@ -76,23 +75,11 @@ aside article:nth-last-child(1) {
 .right-arrow-lightbox {
   color: #901c1c;
   font-size: 2rem;
-  position: absolute;
-  background-color: rgb(56, 33, 33);
-  width: 10px;
-  right: -47rem;
-  top: 48%;
+  width: 40px;
+  margin-top: 30%;
+  margin-left: 96%;
 }
 
-@media (max-width: 1300px) {
-  .right-arrow-lightbox {
-    margin-right: -47.5rem;
-  }
-}
-@media (min-width: 1300px) {
-  .right-arrow-lightbox {
-    right: -47.5 0.5rem;
-  }
-}
 @media (min-width: 600px) {
   .close-lightbox-icon {
     cursor: pointer;
@@ -344,7 +331,7 @@ form input[data-error]::after {
   display: none;
 }
 .works-sort #sort-wrapper button, .works-sort #sort-wrapper span, .works-sort #sort-wrapper ul {
-  margin-top: 2rem;
+  margin-top: 8.5rem;
 }
 
 @media (min-width: 900px) {
@@ -420,7 +407,7 @@ form input[data-error]::after {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin: 0;
+  margin: 2.8125rem 0;
   padding: 0 1.25rem;
 }
 #photos-taken img, #photos-taken video {
@@ -442,7 +429,7 @@ form input[data-error]::after {
   color: #901c1c;
   font-size: 1.1em;
   font-weight: 500;
-  margin: 0 0 0.625rem;
+  margin: 0 0 0.9725rem;
   width: 20.9375rem;
 }
 .ph-taken-elt img, .ph-taken-elt video {
