--- a/sass/home_page-components/_header.scss
+++ b/sass/home_page-components/_header.scss
@@ -3,9 +3,17 @@ header {
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
-    margin-top: 3rem;
-    height: 30px;
+    margin-top: 0rem;
+    height: 150px;
     overflow: hidden;
+    margin-top: -4rem;
+
+    a {
+        img {
+            margin-top: -4rem;
+        }
+    }
+
 }
 
 header > h1 {
@@ -13,5 +21,5 @@ header > h1 {
     font-family: 'DM Sans', sans-serif;
     font-size: 24px;
     width: fit-content;
-    margin-top: -1rem;
+    margin-top: -2rem;
 }
