--- a/sass/home_page-components/_photographers.scss
+++ b/sass/home_page-components/_photographers.scss
@@ -5,7 +5,7 @@
     flex-direction: row;
     margin-bottom: 5rem;
     margin-top: 5rem;
-    padding: 0;
+    text-align: center;
     width: 100%;
     
 }
@@ -29,7 +29,7 @@ article img {
 
 .articlePhotographer {
     text-align: center;
-    width: 20rem;
+    width: 23rem;
     padding: .5rem;
     margin: .5rem;
   }
@@ -40,6 +40,13 @@ article img {
 .articlePhotographer ul {
     display: flex;
     flex-flow: wrap;
+
+    li:hover,
+    li.actived {
+        cursor: pointer;
+        background-color: #901C1C;
+        color: #fff;
+    }
 }
 @media screen and (min-width: map-get($breakpoints, desktop)) {
     .tags {
