--- a/sass/photographer_page-components/_lightbox.scss
+++ b/sass/photographer_page-components/_lightbox.scss
@@ -13,19 +13,17 @@ aside {
         font-family: sans-serif;
         font-size: 1rem;
         font-weight: 600;
-        background-color: rgb(202, 44, 44);
     }
 }
 
 
 #lightbox-body {
-    background-color: #fff;
     height: 90%;
     left: 50%;
     margin: 0 auto;
     position: fixed;
     text-align: center;
-    top: 3%;
+    top: 4%;
     transform: translate(-50%, 0);
     width: 60%;
 }
@@ -35,29 +33,30 @@ aside {
     margin: 0 auto 1rem;
     overflow: hidden;
     background-color: rgba(230, 16, 16, 0);
-    width: 90%;
+    width: 100%;
 
     img, video {
         border-radius: 10px;
         height: 100%;
         object-fit: contain;
-        width: 100%;
+        width: 90%;
+        position: absolute;
+        left: 5%;
+        top: 0%;
     }
 }
 
 .close-lightbox-icon {
     color: #901c1c;
     font-size: 1.7rem;
-    position: absolute;
-    right: -3rem;
-    top: .5rem;
+    margin-left: 97%;
+    margin-top: .5rem;
 }
 
 .left-arrow-lightbox {
     color: #901c1c;
     font-size: 2rem;
-    left: -3rem;
-    background-color: black;
+    left: 0;
     position: absolute;
     top: 48%;
 }
@@ -65,25 +64,23 @@ aside {
 .right-arrow-lightbox {
     color: #901c1c;
     font-size: 2rem;
-    position: absolute;
-    background-color: rgb(56, 33, 33);
     width: 40px;
-    right: -47rem;
-    top: 48%;
+    margin-top: 30%;
+    margin-left: 96%;
 }
 
 
-@media (max-width: 1300px) {
-    .right-arrow-lightbox {
-        margin-right: -47.5rem;
-    }
-}
+// @media (max-width: 1300px) {
+//     .right-arrow-lightbox {
+//         margin-right: -47.5rem;
+//     }
+// }
 
-@media (min-width: 1300px) {
-    .right-arrow-lightbox {
-        right: -47.5.5rem;
-    }
-}
+// @media (min-width: 1300px) {
+//     .right-arrow-lightbox {
+//         right: -47.5.5rem;
+//     }
+// }
 
 @media (min-width: 600px) {
 
