--- a/public/photographer-style/photographer-style.css
+++ b/public/photographer-style/photographer-style.css
@@ -106,7 +106,7 @@ form {
   display: flex;
   flex-direction: column;
   border-radius: 1rem;
-  padding: 1rem 2.2rem 2.2rem;
+  padding: 0 1rem 2.2rem 1rem;
 }
 form header {
   display: flex;
@@ -114,7 +114,7 @@ form header {
   margin: -0.3rem 0.3rem 1rem 0;
 }
 form h1 {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 400;
 }
 form span {
@@ -203,8 +203,9 @@ form input[data-error]::after {
 
 @media (min-width: 600px) {
   #form-dialog {
-    top: 4.3rem;
+    top: 0.3rem;
     width: 95%;
+    height: 400px;
   }
   form .close-form-icon {
     font-size: 2.4rem;
@@ -214,10 +215,11 @@ form input[data-error]::after {
     height: 2.4rem;
   }
   form h1 {
-    font-size: 2.6rem;
+    font-size: 2rem;
+    margin-bottom: -6rem;
   }
   form label, form input, form textarea {
-    font-size: 2.6rem;
+    font-size: 1.6rem;
   }
 }
 #ph-contact {
