--- a/sass/photographer_page-components/_form.scss
+++ b/sass/photographer_page-components/_form.scss
@@ -3,7 +3,7 @@ form {
     display: flex;
     flex-direction: column;
     border-radius: 1rem;
-    padding: 1rem 2.2rem 2.2rem;
+    padding: 0 1rem 2.2rem 1rem;
 
 
     header {
@@ -13,7 +13,7 @@ form {
     }
 
     h1 {
-        font-size: 3rem;
+        font-size: 2rem;
         font-weight: 400;
     }
 
@@ -114,8 +114,9 @@ form {
 
 @media (min-width: 600px) {
     #form-dialog {
-        top: 4.3rem;
+        top: .3rem;
         width: 95%;
+        height: 400px;
 
     }
 
@@ -129,12 +130,13 @@ form {
     }
 
     form h1 {
-        font-size: 2.6rem;
+        font-size: 2rem;
+        margin-bottom: -6rem;
     }
 
     form {
         label, input, textarea {
-            font-size: 2.6rem;
+            font-size: 1.6rem;
         }
     }
 }
