--- a/sass/photographer_page-components/_form.scss
+++ b/sass/photographer_page-components/_form.scss
@@ -3,7 +3,7 @@ form {
     display: flex;
     flex-direction: column;
     border-radius: 1rem;
-    padding: 0 1rem 2.2rem 1rem;
+    padding: 1rem 1rem 2.2rem 1rem;
 
 
     header {
@@ -15,6 +15,7 @@ form {
     h1 {
         font-size: 2rem;
         font-weight: 400;
+        margin-bottom: -2rem;
     }
 
     span {
@@ -131,7 +132,6 @@ form {
 
     form h1 {
         font-size: 2rem;
-        margin-bottom: -6rem;
     }
 
     form {
