--- a/public/photographer-style/photographer-style.css
+++ b/public/photographer-style/photographer-style.css
@@ -102,6 +102,13 @@ aside article:nth-last-child(1) {
   }
 }
 @media (max-width: 600px) {
+  .close-lightbox-icon {
+    position: absolute;
+    cursor: pointer;
+    left: 2%;
+    right: 1rem;
+    top: 0.5rem;
+  }
   .right-arrow-lightbox {
     position: absolute;
     cursor: pointer;
