--- a/sass/photographer_page-components/_lightbox.scss
+++ b/sass/photographer_page-components/_lightbox.scss
@@ -64,8 +64,7 @@ aside {
 .right-arrow-lightbox {
     color: #901c1c;
     font-size: 2rem;
-    width: 40px;
-    margin-top: 30%;
+    margin-top: 38%;
     margin-left: 96%;
 }
 
@@ -111,7 +110,7 @@ aside {
 
 @media (max-width: 600px) {
     .close-lightbox-icon {
-        position: absolute;
+        position: relative;
         cursor: pointer;
         left: 2%;
         right: 1rem;
@@ -121,7 +120,7 @@ aside {
         position: absolute;
         cursor: pointer;
         left: 0;
-        top: 48%;
+        top: 27%;
     }
     .left-arrow-lightbox {
         position: absolute;
