--- a/public/photographer-style/photographer-style.css
+++ b/public/photographer-style/photographer-style.css
@@ -65,18 +65,19 @@ aside article:nth-last-child(1) {
 }
 
 .left-arrow-lightbox {
-  color: #901c1c;
+  color: #901C1C;
   font-size: 2rem;
-  left: 0;
+  left: -3rem;
   position: absolute;
   top: 48%;
 }
 
 .right-arrow-lightbox {
-  color: #901c1c;
+  color: #901C1C;
   font-size: 2rem;
-  margin-top: 38%;
-  margin-left: 96%;
+  position: absolute;
+  right: -60rem;
+  top: 48%;
 }
 
 @media (min-width: 600px) {
@@ -98,27 +99,6 @@ aside article:nth-last-child(1) {
   aside article:nth-last-child(1) {
     left: 23%;
     padding: 0.5rem 0;
-  }
-}
-@media (max-width: 600px) {
-  .close-lightbox-icon {
-    position: relative;
-    cursor: pointer;
-    left: 2%;
-    right: 1rem;
-    top: 0.5rem;
-  }
-  .right-arrow-lightbox {
-    position: absolute;
-    cursor: pointer;
-    left: 0;
-    top: 27%;
-  }
-  .left-arrow-lightbox {
-    position: absolute;
-    cursor: pointer;
-    left: -8%;
-    top: 48%;
   }
 }
 form {
