--- a/public/photographer-style/photographer-style.css
+++ b/public/photographer-style/photographer-style.css
@@ -79,11 +79,6 @@ aside article:nth-last-child(1) {
   top: 48%;
 }
 
-@media (min-width: 1200px) {
-  .right-arrow-lightbox {
-    right: -47.5rem;
-  }
-}
 @media (min-width: 600px) {
   .close-lightbox-icon {
     cursor: pointer;
@@ -97,7 +92,7 @@ aside article:nth-last-child(1) {
   }
   .right-arrow-lightbox {
     cursor: pointer;
-    left: 0;
+    right: 0;
     top: 48%;
   }
   aside article:nth-last-child(1) {
