--- a/public/photographer-style/photographer-style.css
+++ b/public/photographer-style/photographer-style.css
@@ -102,6 +102,27 @@ aside article:nth-last-child(1) {
     padding: 0.5rem 0;
   }
 }
+@media (max-width: 600px) {
+  .close-lightbox-icon {
+    position: absolute;
+    cursor: pointer;
+    left: 98%;
+    right: 1rem;
+    top: 0.5rem;
+  }
+  .right-arrow-lightbox {
+    position: relative;
+    cursor: pointer;
+    left: 52%;
+    top: 48%;
+  }
+  .left-arrow-lightbox {
+    position: absolute;
+    cursor: pointer;
+    left: -8%;
+    top: 48%;
+  }
+}
 form {
   background-color: #db8876;
   display: flex;
