--- a/sass/photographer_page-components/_phProfile.scss
+++ b/sass/photographer_page-components/_phProfile.scss
@@ -8,7 +8,10 @@
     font-size: 1em;
     font-weight: 500;
     height: 35px;
-    position: fixed;
+    position: absolute;
+    top: 60%;
+    left: 40%;
+
     width: 170PX;
     
 
