--- a/sass/home_page-components/_photographers.scss
+++ b/sass/home_page-components/_photographers.scss
@@ -40,6 +40,7 @@ article img {
 .articlePhotographer ul {
     display: flex;
     flex-flow: wrap;
+    justify-content: center;
 
     li:hover,
     li.actived {
